Bug 74462 - FILEOPEN: Image too small in imported ABW file
Summary: FILEOPEN: Image too small in imported ABW file
Status: RESOLVED FIXED
Alias: None
Product: Document Liberation Project
Classification: Unclassified
Component: libabw (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: David Tardon
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-03 17:47 UTC by Geoffrey
Modified: 2017-12-31 11:48 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
LibreOffice 4.2.0.4 (release) opening the file (205.48 KB, image/png)
2014-02-03 17:47 UTC, Geoffrey
Details
The same file, now opened in AbiWord 3.0.0 (141.38 KB, image/png)
2014-02-03 17:48 UTC, Geoffrey
Details
The file used for the previous two screenshots (75.24 KB, application/x-abiword)
2014-02-03 17:48 UTC, Geoffrey
Details
New file based on the old one, paragraph aligned (77.61 KB, application/abiword)
2014-02-06 10:17 UTC, Geoffrey
Details
Screenshot of the image properties (51.03 KB, image/png)
2014-02-06 10:28 UTC, Geoffrey
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Geoffrey 2014-02-03 17:47:59 UTC
Created attachment 93300 [details]
LibreOffice 4.2.0.4 (release) opening the file

Since LibreOffice 4.2, support for ABW files (created in AbiWord) was added. The file I'm opening contains an image, which originally was larger. I resized it in AbiWord and opened it in LibreOffice 4.2. It imports the document very well, but since AbiWord does not save dimensions of images, the image (PNG) is quite small.

Please use a default image size which is somewhat more useful then the very small one used now.
Comment 1 Geoffrey 2014-02-03 17:48:25 UTC
Created attachment 93301 [details]
The same file, now opened in AbiWord 3.0.0
Comment 2 Geoffrey 2014-02-03 17:48:57 UTC
Created attachment 93302 [details]
The file used for the previous two screenshots
Comment 3 Jacques Guilleron 2014-02-04 14:39:21 UTC
Hi Geoffrey,

Here, the image is anchored 'as character'. Can you try in Abiword to change anchorage 'to paragraph' to see if you have a better size when you open the file with LO?

Thank you,

Kind regards,

Jacques
Comment 4 Geoffrey 2014-02-06 10:17:14 UTC
Created attachment 93517 [details]
New file based on the old one, paragraph aligned
Comment 5 Geoffrey 2014-02-06 10:28:11 UTC
(In reply to comment #3)
> Hi Geoffrey,
> 
> Here, the image is anchored 'as character'. Can you try in Abiword to change
> anchorage 'to paragraph' to see if you have a better size when you open the
> file with LO?
> 
> Thank you,
> 
> Kind regards,
> 
> Jacques

The image is now invisible. I think I set the image/chart to paragraph style, please verify with the screenshot.
Comment 6 Geoffrey 2014-02-06 10:28:39 UTC
Created attachment 93518 [details]
Screenshot of the image properties
Comment 7 Jacques Guilleron 2014-02-06 13:47:15 UTC
Hi Geoffrey,

As for Logo in the first document, image size and location are now saved in the xml file, and also invisible.

I set status to NEW,

Kind regards,

Jacques
Comment 8 David Tardon 2017-12-31 11:48:53 UTC
We set minimal width/height on inline images to 1 inch now.