tdf#74462 use min width/height for inline images

Change-Id: I0a3f14ff4ab7d01eaa76bbfc2fe2d890ff336272